Add responsive floating dock navigation
Introduce a new FloatingDock UI component and a FloatingDockNavigation wrapper (src/components/ui/floating-dock.tsx, src/components/FloatingDockNavigation.tsx) that provides an animated, responsive navigation dock (desktop hover-expand + mobile collapse). Integrate the dock into MainLayout so it appears across pages. Tweak Navbar mobile menu (commented-out navLinks mapping and adjust padding). Update package.json to add @tabler/icons-react and bump motion dependency version.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.93.3",
+    "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.83.0",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
@@ -52,7 +53,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
-    "motion": "^12.31.0",
+    "motion": "^12.33.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
