Optimize uploads with WebP + lazy-load routes
Add server-side WebP conversion for uploaded images using sharp and Uploadthing UTApi (uploads converted .webp, deletes original when appropriate) and expose webpUrl to the client. Add zod-based env validation on server (UPLOADTHING_TOKEN) and client (VITE_SUPABASE_*) to fail fast on misconfiguration. Introduce lazy-loaded routes with React.lazy and Suspense + a small RouteFallback to reduce initial bundle size. Update ImageUpload to prefer server-provided webpUrl, improve hero image loading attributes (loading, fetchPriority, decoding), add build:analyze script and rollup visualizer dependency, and ignore the bundle report in .gitignore. Run npm install to pick up sharp and analyzer packages; note that sharp has optional platform-specific binaries.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist
 dist-ssr
 *.local
 
+# Bundle analyzer reports
+dist/bundle-report.html
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
